<resources>
    <string name="app_name">Calculadoraa</string>
    <string name="titulo">Calculadora</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="multi">*</string>
    <string name="div">/</string>
    <string name="result">RESULT</string>
    <string name="borrar">BORRAR</string>
    <string name="hint0">0</string>

</resources>