<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnResult"
        android:layout_width="80dp"
        android:layout_height="51dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="241dp"
        android:text="@string/result"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn0"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="80dp"
        android:layout_height="51dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="27dp"
        android:text="@string/div"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMulti2" />

    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="80dp"
        android:layout_height="51dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="241dp"
        android:text="@string/borrar"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDiv"
        app:layout_constraintStart_toEndOf="@+id/btnResult"
        app:layout_constraintTop_toBottomOf="@+id/btn3" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="80dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="241dp"
        android:text="@string/num0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnResult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="80dp"
        android:layout_height="51dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="15dp"
        android:text="@string/num2"
        app:layout_constraintEnd_toStartOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/btn5" />

    <Button
        android:id="@+id/btnMulti2"
        android:layout_width="80dp"
        android:layout_height="51dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="27dp"
        android:text="@string/multi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnResta" />

    <Button
        android:id="@+id/btnSuma"
        android:layout_width="80dp"
        android:layout_height="51dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="34dp"
        android:text="@string/suma"
        app:layout_constraintBottom_toTopOf="@+id/btnResta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAbajo" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="80dp"
        android:layout_height="51dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="34dp"
        android:text="@string/num3"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintTop_toBottomOf="@+id/btn6" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="80dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="15dp"
        android:text="@string/num1"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="80dp"
        android:layout_height="51dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="34dp"
        android:text="@string/num5"
        app:layout_constraintStart_toEndOf="@+id/btn4"
        app:layout_constraintTop_toBottomOf="@+id/btn8" />

    <Button
        android:id="@+id/btnResta"
        android:layout_width="80dp"
        android:layout_height="51dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="27dp"
        android:text="@string/resta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSuma" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="80dp"
        android:layout_height="51dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="18dp"
        android:text="@string/num6"
        app:layout_constraintEnd_toStartOf="@+id/btnResta"
        app:layout_constraintStart_toEndOf="@+id/btn5"
        app:layout_constraintTop_toBottomOf="@+id/btn9" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="80dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="15dp"
        android:text="@string/num4"
        app:layout_constraintEnd_toStartOf="@+id/btn5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn7" />



    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/tvArriba"
        android:layout_width="379dp"
        android:layout_height="31dp"
        android:layout_marginTop="89dp"
        android:layout_marginBottom="17dp"
        android:textAlignment="textEnd"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/tvAbajo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAbajo"
        android:layout_width="377dp"
        android:layout_height="37dp"
        android:layout_marginTop="12dp"
        android:hint="@string/hint0"
        android:textAlignment="textEnd"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvArriba" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="80dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="34dp"
        android:text="@string/num7"
        app:layout_constraintBottom_toTopOf="@+id/btn4"
        app:layout_constraintEnd_toStartOf="@+id/btn8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAbajo" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="80dp"
        android:layout_height="51dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="34dp"
        android:text="@string/num8"
        app:layout_constraintBottom_toTopOf="@+id/btn5"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        app:layout_constraintTop_toBottomOf="@+id/tvAbajo" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="80dp"
        android:layout_height="51dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="34dp"
        android:text="@string/num9"
        app:layout_constraintBottom_toTopOf="@+id/btn6"
        app:layout_constraintEnd_toStartOf="@+id/btnSuma"
        app:layout_constraintTop_toBottomOf="@+id/tvAbajo" />



</androidx.constraintlayout.widget.ConstraintLayout>